--- a/src/main/resources/templates/presentation/fragments/fragment-footer.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-footer.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <footer class="bg-white py-4 mt-auto" th:fragment="footer">
-    <div class="container px-5">
-        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-            <div class="col-auto">
-                <div class="small m-0">Copyright &copy; KimAuto 2024</div>
-            </div>
-        </div>
-    </div>
+   <div class="container px-5">
+      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+         <div class="col-auto">
+            <div class="small m-0">Copyright &copy; Your KimAuto 2024</div></div>
+      </div>
+   </div>
 </footer>
+
 </body>
 </html>
