--- a/src/main/resources/templates/presentation/fragments/fragment-navigation.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-navigation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-white py-3" th:fragment="navigation"> <!-- 이름 지정 -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-3" th:fragment="navigation">
     <div class="container px-5">
         <a class="navbar-brand" href="/"><span class="fw-bolder text-primary">KimAuto</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
