--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -1,12 +1,12 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-  <div th:replace="~{presentation/fragments/fragment-head :: head}"></div>
+<div th:replace="~{presentation/fragments/fragment-head :: head}"></div>
 
-  <body class="d-flex flex-column h-100">
+    <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <div th:replace="~{presentation/fragments/fragment-navigation :: navigation}"></div>
+           <div th:replace="~{presentation/fragments/fragment-navigation :: navigation}"></div>
             <!-- Header-->
             <header class="py-5">
                 <div class="container px-5 pb-5">
@@ -14,9 +14,9 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Kotlin &middot; Spring &middot; JPA</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Kotlin &middot; Spring &middot; Jpa</div></div>
                                 <div class="fs-3 fw-light text-muted">안녕하세요</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">개발하는 고양이 <br> 김병곤입니다.</span></h1>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">개발하는 아기 <br> 김오토입니다.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects">Projects</a>
@@ -29,11 +29,12 @@
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                    <img class="profile-img" src="assets/profile.png" alt="..." />
+                                    <img class="profile-img" src="assets/KimAuto.png" alt="..." />
                                     <div th:replace="~{presentation/fragments/fragment-dots :: dots1}"></div>
                                     <div th:replace="~{presentation/fragments/fragment-dots :: dots2}"></div>
                                     <div th:replace="~{presentation/fragments/fragment-dots :: dots3}"></div>
                                     <div th:replace="~{presentation/fragments/fragment-dots :: dots4}"></div>
+
                                 </div>
                             </div>
                         </div>
