뷰 개발 - 테이블 페이지 모델 form

--- a/src/main/resources/templates/admin/page-table.html
+++ b/src/main/resources/templates/admin/page-table.html
@@ -15,6 +15,9 @@
 
   </th:block>
 
+  <div th:replace="~{admin/fragments/fragment-modal-form :: modalForm(${formElements})}"></div>
+
+
 
 </main><!-- End #main -->
 </body>
