--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -15,7 +15,7 @@
                         </div>
                         <div class="fs-3 fw-light text-muted">안녕하세요</div>
                         <h1 class="display-3 fw-bolder mb-5"><span
-                                class="text-gradient d-inline">개발하는 아기 <br> 김오토입니다.</span></h1>
+                                class="text-gradient d-inline">백엔드 개발자  <br> 김병곤입니다.</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                             <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume">Resume</a>
                             <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects">Projects</a>
